@@ -18,23 +18,24 @@ wireless nodes because wireless does not know about MAC addresses used
 in the wired Ethernet networks. Also this daemon is useful
 for making transparent firewalls.
 
-The daemon will listen for incoming ARP requests and forward
-them to other interfaces, as well as update kernel ARP table with the
-received replies. Also the daemon will add direct /32 routes to your
-kernel to the hosts learned via ARP. This way, your kernel will be able
-to route the packets to the destination host when it receives it and you will
-not have to care about setting routing/subnetting manually. All routes
-entered by the daemon will have a metric of 50. 
+The daemon listens for incoming ARP requests, and in case the location 
+of the requested IP address is unknown, forwards them to other interfaces, 
+as well as updates kernel ARP table with the received replies. When 
+necessary, the daemon generates an ARP reply itself, which causes the 
+stations to send traffic to the host daemon is running on. By 
+automatically adding appropriate /32 routes to Linux kernel IP routing 
+table for the hosts learned via ARP, daemon ensures that the Linux kernel 
+will be able to route the packets to the destination host when it receives 
+them without any need routing/subnetting manually.  
+
+All routes entered by the daemon have a metric of 50. 
 
 Unless you use B<-p> switch, all entries in the ARP table will be
 refreshed (rechecked by sending ARP requests) every 50 seconds. This
 keeps them from being expired by kernel.
 
-It takes about 3-5 seconds for a bridge to update all its tables and
-start sending packets to the destination. So, for example, if you have
-two bridges, the bridging time can be up to 10 seconds. However
-afterwards ARP entries are in the tables and there will be no delay
-until they time out.
+Normally it takes about 60 ms for a bridge to update all its tables and
+start sending packets to the destination.
 
 =head1 REQUIREMENTS
 
